--- a/index.html
+++ b/index.html
@@ -1,52 +1,74 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Abdullah Hammad | Junior Penetration Tester</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background-color: #f4f4f4; }
-    h1 { color: #333; }
-    p { color: #666; }
-    .section { margin-bottom: 30px; }
-    a { color: #007bff; text-decoration: none; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abdullah Hammad | Penetration Tester</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Abdullah Hammad</h1>
-  <h2>Junior Penetration Tester | Cybersecurity Enthusiast</h2>
+    <!-- Header -->
+    <header>
+        <div class="navbar">
+            <div class="logo">Abdullah Hammad</div>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <div class="section">
-    <h3>About Me</h3>
-    <p>I'm passionate about cybersecurity, web application security, and network penetration testing. Constantly learning and exploring vulnerabilities through hands-on labs and certifications like Security+ and eJPTv2.</p>
-  </div>
+    <!-- About Section -->
+    <section id="about">
+        <h1>About Me</h1>
+        <p>Hello, I'm Abdullah Hammad, a Junior Penetration Tester with a passion for cybersecurity, ethical hacking, and web application security. I aim to help companies strengthen their security posture through proactive penetration testing and vulnerability analysis.</p>
+    </section>
 
-  <div class="section">
-    <h3>Skills</h3>
-    <ul>
-      <li>Penetration Testing Tools: Nmap, Burp Suite, Metasploit, Wireshark</li>
-      <li>Web Security: OWASP Top 10, Web Application Testing</li>
-      <li>Networking: TCP/IP, OSI Model, Vulnerability Scanning</li>
-      <li>Platforms: TryHackMe, Hack The Box</li>
-    </ul>
-  </div>
+    <!-- Skills Section -->
+    <section id="skills">
+        <h1>Skills</h1>
+        <div class="skills">
+            <div class="skill">
+                <h3>Penetration Testing Tools</h3>
+                <p>Nmap, Burp Suite, Metasploit, Wireshark, Gobuster</p>
+            </div>
+            <div class="skill">
+                <h3>Networking</h3>
+                <p>TCP/IP, OSI Model, Network Scanning, Packet Analysis</p>
+            </div>
+            <div class="skill">
+                <h3>Web Security</h3>
+                <p>OWASP Top 10, Web Application Vulnerability Scanning</p>
+            </div>
+        </div>
+    </section>
 
-  <div class="section">
-    <h3>Projects</h3>
-    <ul>
-      <li>Completed 50+ labs on TryHackMe Junior Penetration Tester Path</li>
-      <li>Rooted machines on Hack The Box</li>
-      <li>Practiced real-world pentesting in eJPTv2 labs</li>
-    </ul>
-  </div>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h1>Projects</h1>
+        <div class="project-list">
+            <div class="project">
+                <h3>TryHackMe: Junior Penetration Tester Path</h3>
+                <p>Completed 50+ penetration testing challenges covering various security vulnerabilities.</p>
+            </div>
+            <div class="project">
+                <h3>Hack The Box</h3>
+                <p>Rooted multiple machines and explored real-world pentesting scenarios.</p>
+            </div>
+        </div>
+    </section>
 
-  <div class="section">
-    <h3>Contact Me</h3>
-    <p>Email: abdullah.hammad@email.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/abdallah-hammad-376a42231/">linkedin.com/in/abdallah-hammad</a></p>
-    <p>GitHub: <a href="https://github.com/AbdullahHammad-1">github.com/AbdullahHamad-1</a></p>
-  </div>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h1>Contact</h1>
+        <p>Email: abdullah.hammad@email.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/abdullah-hammad">linkedin.com/in/abdullah-hammad</a></p>
+    </section>
 
+    <script src="app.js"></script>
 </body>
 </html>
