--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="contact">
         <h1>Contact</h1>
         <p>Email: abdullah.hammad@email.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/abdullah-hammad">linkedin.com/in/abdullah-hammad</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/abdallah-hammad-376a42231/">linkedin.com/in/abdallah-hammad</a></p>
     </section>
 
     <script src="app.js"></script>
